# sat_ds

./: README.md  pyproject.toml
.github/workflows/: publish.yml  teste.yml
src/components/: __init__.py
src/components/accordeon_ds/: __init__.py
src/components/accordeon_ds/css/: accordeon_ds.css
src/components/button_ds/css/: button_ds.css
src/components/card_dist_ds/css/: card_dist_ds.css
src/components/card_metric_ds/: card_metric_ds.py
src/components/card_metric_ds/css/: card_metric_ds.css
src/components/identification_field_ds/: __init__.py
src/components/identification_field_ds/css/: identification_field_ds.css
src/components/info_bar_ds/: __init__.py
src/components/info_bar_ds/css/: info_bar_ds.css
src/components/panel_ds/: __init__.py  panel_ds.py
src/components/panel_ds/css/: panel_ds.css
src/components/tabs_ds/: __init__.py  tabs_ds.py
src/components/tabs_ds/css/: tabs_ds.css
src/sat_ds.egg-info/: PKG-INFO  SOURCES.txt
src/theme/: __init__.py  colors.py
