[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-ds"
version = "0.0.1"
description = "Biblioteca de componentes reutilizáveis"
readme = "README.md"
authors = [
  { name="lpozza" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "streamlit>=1.35.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]